--- a/CameraFilter/CameraFilter/Base.lproj/Main.storyboard
+++ b/CameraFilter/CameraFilter/Base.lproj/Main.storyboard
@@ -9,17 +9,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Camera Filter-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CameraFilter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zQ4-k9-Y9u">
+                                <rect key="frame" x="0.0" y="88" width="414" height="672"/>
+                            </imageView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="eRz-rk-Ouq">
+                                <rect key="frame" x="136" y="807" width="148" height="30"/>
+                                <color key="backgroundColor" systemColor="linkColor"/>
+                                <state key="normal" title="Apply Filter">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zQ4-k9-Y9u" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="9zg-6E-BgM"/>
+                            <constraint firstItem="zQ4-k9-Y9u" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UYM-lx-taP"/>
+                            <constraint firstItem="eRz-rk-Ouq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="136" id="Vy2-o0-Ufr"/>
+                            <constraint firstItem="zQ4-k9-Y9u" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hjM-3C-oEl"/>
+                            <constraint firstItem="eRz-rk-Ouq" firstAttribute="top" secondItem="zQ4-k9-Y9u" secondAttribute="bottom" constant="47" id="l0T-qs-Mjo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="eRz-rk-Ouq" secondAttribute="bottom" constant="25" id="l1g-Hf-VI7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eRz-rk-Ouq" secondAttribute="trailing" constant="130" id="raE-aI-t34"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="VLm-ze-TqR">
+                    <navigationItem key="navigationItem" title="Camera Filter" id="VLm-ze-TqR">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="b94-dz-k52">
                             <connections>
                                 <segue destination="yJn-dl-zVb" kind="presentation" id="UQr-Ny-h3f"/>
@@ -31,10 +52,10 @@
             </objects>
             <point key="canvasLocation" x="1050.7246376811595" y="138.61607142857142"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Photos Collection View Controller-->
         <scene sceneID="0SW-RC-1Vi">
             <objects>
-                <collectionViewController id="qCr-vZ-E6b" sceneMemberID="viewController">
+                <collectionViewController id="qCr-vZ-E6b" customClass="PhotosCollectionViewController" customModule="CameraFilter" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Ma4-ht-ZSl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -104,6 +125,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
